--- a/css/style.css
+++ b/css/style.css
@@ -579,6 +579,11 @@ footer p {
 
 /* Media query */
 @media(max-width: 400px){
+
+    #informacion {
+        height: 300px;
+    }
+
     .cardNosotros img{
         width: 100%;
     }
@@ -665,14 +670,6 @@ footer p {
         position: relative;
     }
 
-    .slider {
-        width: 90vw;
-        height: 70vh;
-    }
-    
-    .btn-prev , .btn-next{
-        display: none;
-    }
 
     .contenedor-Productos {
         display: grid;
@@ -786,7 +783,6 @@ footer p {
     }
 
     .sub .drop2 li a {
-        /* padding: 10px; */
         background: #DF363C;
         color: #FFF;
         text-decoration: none;
